@@ -149,15 +149,21 @@ CHECK_TARGETS = \
     build-frontend:check-serial \
     build-frontend:check-omp \
     build-backend:check-serial \
-    build-backend:check-omp \
+    build-backend:check-omp
+if HAVE_SCOREP_MPI
+CHECK_TARGETS += \
     build-mpi:check-mpi \
     build-mpi:check-mpi-omp
+endif HAVE_SCOREP_MPI
 else !CROSS_BUILD
 CHECK_TARGETS = \
     build-backend:check-serial \
-    build-backend:check-omp \
+    build-backend:check-omp
+if HAVE_SCOREP_MPI
+CHECK_TARGETS += \
     build-mpi:check-mpi \
     build-mpi:check-mpi-omp
+endif HAVE_SCOREP_MPI
 endif !CROSS_BUILD
 
 check-local:
