@@ -72,7 +72,11 @@ CLEANFILES +=../src/scorep_config_library_dependencies_mpi_inc.hpp
 # The library dependencies are needed for the frontend tool. However, the
 # backend information is in the MPI Makefile. Thus, invoke the MPI Makefile.
 ../src/scorep_config_library_dependencies_mpi_inc.hpp:
-	@$(am__cd) ../build-mpi && $(MAKE) $(AM_MAKEFLAGS) $@
+	@if test -d ../build-mpi; then \
+             $(am__cd) ../build-mpi && $(MAKE) $(AM_MAKEFLAGS) $@; \
+         else \
+             touch ../src/scorep_config_library_dependencies_mpi_inc.hpp; \
+         fi
 
 
 if HAVE_PDT
