@@ -4,7 +4,7 @@
 /* 
  * This file is part of the Score-P software (http://www.score-p.org)
  *
- * Copyright (c) 2012-2013, 
+ * Copyright (c) 2013, 
  * Forschungszentrum Juelich GmbH, Germany
  *
  * This software may be modified and distributed under the terms of
@@ -15,10 +15,10 @@
 
 /* @configure_input@ */
 
-#define SCOREP_MPICC                        "@CC@"
-#define SCOREP_MPICXX                       "@CXX@"
-#define SCOREP_MPIFC                        "@FC@"
-#define SCOREP_HAVE_PDT_MPI_INSTRUMENTATION @SCOREP_HAVE_PDT_MPI_INSTRUMENTATION@
-#define SCOREP_MPI_INCLUDE                  "@SCOREP_MPI_INCLUDE@"
+#define SCOREP_MPICC                        "not available in this installation"
+#define SCOREP_MPICXX                       "not available in this installation"
+#define SCOREP_MPIFC                        "not available in this installation"
+#define SCOREP_HAVE_PDT_MPI_INSTRUMENTATION 0
+#define SCOREP_MPI_INCLUDE                  "not supported in this installation"
 
 #endif /* SCOREP_CONFIG_TOOL_MPI_H */
